style(css): target header
styled header padding and position

closed

--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,8 @@ body.noscript .close-btn,
 body.noscript .toggle-btn {
   display: none;
 }
+
+header {
+  padding: 0 1em;
+  position: relative;
+}
