style(css): target toggle
style for position

closed

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -32,3 +32,11 @@ header {
   padding: 0 1em;
   position: relative;
 }
+
+
+    .toggle-btn{
+    position: absolute;
+    right: 1em;
+    top: 0;
+  }
+    
