--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -40,3 +40,21 @@ header {
     top: 0;
   }
     
+.navigation{
+        ul{
+            padding:0; 
+        }
+        li{
+            list-style-type: none;
+            &:first-child a{
+      border-top: 1px solid $light-grey;
+    }
+    a{
+      display: block;
+      padding: .5em 1em;
+      text-align: center;
+      border-bottom: 1px solid $light-grey;
+      text-decoration: none;
+    }
+  } // li
+} // .navigation ul
