--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -80,3 +80,62 @@ header {
 .close-btn{
   margin: 1em;
 }
+
+/**
+ * Sliding Navigation
+ */
+
+// Page should move when nav opens
+// only time we will ever use max-width
+@media only screen and (max-width: 60em){
+  .site-wrapper{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    z-index: 100;
+    .sliding-canvas{
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform: translateX(0);
+      @include ease(all, 300ms, ease-in-out);
+    }
+
+    &[data-state='slide-open'] .sliding-canvas{
+      transform: translateX(-100%);
+    }
+
+    &[data-state='slide-open']{
+      // Allow expansion of navigation past page height, when open
+      overflow:visible;
+    }
+  }
+
+  // Nav styles
+  .slide-menu{
+    //creates sliding effect
+    position: absolute;
+    width: 100%;
+    right: -100%;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    padding: 0;
+    min-height: 800px;
+  }
+}
+
+// Resets page when desktop, even if nav is toggled open
+@media only screen and (min-width: 60em) {
+  .toggle-btn,
+  .close-btn{
+    display: none;
+  }
+}
+
+
+body.noscript .slide-menu{
+  position: static;
+  right: auto;
+}
+}
