--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,54 @@ header {
 .close-btn {
   margin: 1em;
 }
+
+/**
+ * Sliding Navigation
+ */
+@media only screen and (max-width: 60em) {
+  .site-wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    z-index: 100;
+  }
+  .site-wrapper .sliding-canvas {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: translateX(0);
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+  }
+  .site-wrapper[data-state='slide-open'] .sliding-canvas {
+    transform: translateX(-100%);
+  }
+  .site-wrapper[data-state='slide-open'] {
+    overflow: visible;
+  }
+  .slide-menu {
+    position: absolute;
+    width: 100%;
+    right: -100%;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    padding: 0;
+    min-height: 800px;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  .toggle-btn,
+  .close-btn {
+    display: none;
+  }
+}
+
+body.noscript .slide-menu {
+  position: static;
+  right: auto;
+}
