style(css): more colors
added more colors to _base.scss

closed

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,5 +2,8 @@
 
 $light-grey: #ccc;
 $dark-grey: #222;
+$mustard-yellow: #fa940b;
+$red: #c10000;
+$greenish-blue: #0c7a7a;
 
 $text-color: $dark-grey;
