--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
+  /**
+ * Sliding Navigation
+ */
 }
 
 body.noscript .close-btn,
@@ -46,30 +49,30 @@ body.noscript .toggle-btn {
   display: none;
 }
 
-header {
+body header {
   padding: 0 1em;
   position: relative;
 }
 
-.toggle-btn {
+body .toggle-btn {
   position: absolute;
   right: 1em;
   top: 0;
 }
 
-.navigation ul {
+body .navigation ul {
   padding: 0;
 }
 
-.navigation li {
+body .navigation li {
   list-style-type: none;
 }
 
-.navigation li:first-child a {
+body .navigation li:first-child a {
   border-top: 1px solid #ccc;
 }
 
-.navigation li a {
+body .navigation li a {
   display: block;
   padding: .5em 1em;
   text-align: center;
@@ -77,16 +80,16 @@ header {
   text-decoration: none;
 }
 
-.toggle-btn,
-.close-btn {
+body .toggle-btn,
+body .close-btn {
   color: #222;
   text-decoration: none;
   height: 40px;
   width: 40px;
 }
 
-.toggle-btn:before,
-.close-btn:before {
+body .toggle-btn:before,
+body .close-btn:before {
   border: 1px solid #ccc;
   padding: 13px 11px;
   height: 40px;
@@ -94,30 +97,27 @@ header {
   display: inline-block;
 }
 
-.toggle-btn span,
-.close-btn span {
+body .toggle-btn span,
+body .close-btn span {
   position: absolute !important;
-  height: 1px;
-  width: 1px;
+  height: 9px;
+  width: 9px;
   overflow: hidden;
   clip: rect(1px, 1px, 1px, 1px);
 }
 
-.close-btn {
+body .close-btn {
   margin: 1em;
 }
 
-/**
- * Sliding Navigation
- */
 @media only screen and (max-width: 60em) {
-  .site-wrapper {
+  body .site-wrapper {
     position: relative;
     overflow: hidden;
     width: 100%;
     z-index: 100;
   }
-  .site-wrapper .sliding-canvas {
+  body .site-wrapper .sliding-canvas {
     width: 100%;
     height: 100%;
     position: relative;
@@ -128,13 +128,13 @@ header {
     -o-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
   }
-  .site-wrapper[data-state='slide-open'] .sliding-canvas {
+  body .site-wrapper[data-state='slide-open'] .sliding-canvas {
     transform: translateX(-100%);
   }
-  .site-wrapper[data-state='slide-open'] {
+  body .site-wrapper[data-state='slide-open'] {
     overflow: visible;
   }
-  .slide-menu {
+  body .slide-menu {
     position: absolute;
     width: 100%;
     right: -100%;
@@ -147,13 +147,13 @@ header {
 }
 
 @media only screen and (min-width: 60em) {
-  .toggle-btn,
-  .close-btn {
+  body .toggle-btn,
+  body .close-btn {
     display: none;
   }
 }
 
-body.noscript .slide-menu {
+body body.noscript .slide-menu {
   position: static;
   right: auto;
 }
