--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -5,6 +5,8 @@ $dark-grey: #222;
 $mustard-yellow: #fa940b;
 $red: #c10000;
 $greenish-blue: #0c7a7a;
+$white: #fff;
+$black: #000;
 
 $text-color: $dark-grey;
 
