--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -45,9 +45,9 @@ header {
         }
         li{
             list-style-type: none;
-            &:first-child a{
-      border-top: 1px solid $light-grey;
-    }
+            background-color: white;
+  }
+            
     a{
       display: block;
       padding: .5em 1em;
@@ -55,8 +55,7 @@ header {
       border-bottom: 1px solid $light-grey;
       text-decoration: none;
     }
-  } // li
-} // .navigation ul
+  } 
 
 .toggle-btn,
 .close-btn{
