--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,11 @@ body .navigation li {
   background-color: white;
 }
 
-body .navigation a {
+body .navigation li:first-child a {
+  border-top: 1px;
+}
+
+body .navigation li a {
   padding: 0.5em 1em;
   display: block;
   text-align: center;
@@ -77,12 +81,12 @@ body .navigation a {
   color: #222;
 }
 
-body .navigation a:focus {
+body .navigation li a:focus {
   background-color: #c10000;
   color: #fff;
 }
 
-body .navigation a:hover {
+body .navigation li a:hover {
   background-color: #fa940b;
   color: #fff;
 }
@@ -97,7 +101,6 @@ body .close-btn {
 
 body .toggle-btn:before,
 body .close-btn:before {
-  border: 1px solid #ccc;
   padding: 13px 11px;
   height: 40px;
   width: 40px;
@@ -107,8 +110,8 @@ body .close-btn:before {
 body .toggle-btn span,
 body .close-btn span {
   position: absolute !important;
-  height: 9px;
-  width: 9px;
+  height: 1px;
+  width: 1px;
   overflow: hidden;
   clip: rect(1px, 1px, 1px, 1px);
 }
@@ -141,13 +144,12 @@ body .close-btn {
   body .site-wrapper[data-state='slide-open'] {
     overflow: visible;
   }
-  body .slide-menu {
+  body .navigation {
     position: absolute;
     width: 100%;
     right: -100%;
     top: 0;
     bottom: 0;
-    height: 100%;
     padding: 0;
     min-height: 800px;
   }
@@ -160,7 +162,7 @@ body .close-btn {
   }
 }
 
-body body.noscript .slide-menu {
+body body.noscript .navigation {
   position: static;
   right: auto;
 }
