--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -46,7 +46,9 @@ header {
         li{
             list-style-type: none;
             background-color: white;
-  }
+        	&:first-child a{
+			border-top: 1px;
+		}
             
     a{
       padding: 0.5em 1em;
@@ -64,6 +66,8 @@ header {
     }
   }
     }
+        
+    }
    
 
 .toggle-btn,
@@ -73,7 +77,6 @@ header {
 	height: 40px;
 	width: 40px;
 	&:before{
-		border: 1px solid $light-grey;
 		padding: 13px 11px;
 		height: 40px;
 		width: 40px;
@@ -120,14 +123,13 @@ header {
   }
 
   // Nav styles
-  .slide-menu{
+  .navigation{
     //creates sliding effect
     position: absolute;
     width: 100%;
     right: -100%;
     top: 0;
     bottom: 0;
-    height: 100%;
     padding: 0;
     min-height: 800px;
   }
@@ -142,7 +144,7 @@ header {
 }
 
 
-body.noscript .slide-menu{
+body.noscript .navigation{
   position: static;
   right: auto;
 }
