--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -25,51 +25,48 @@ body{
   &.noscript .close-btn,
   &.noscript .toggle-btn{
       display: none;
-  }
+    }
     position: relative;
 }
 
 header {
-  padding: 0 1em;
-  position: relative;
+    padding: 0 1em;
+    position: relative;
 }
-      
-    
-    .toggle-btn{
+
+.toggle-btn{
     position: absolute;
     right: 1em;
     top: 0;
-  }
-    
-    .navigation{
-        ul{
+}
+
+.navigation ul{
             padding:0; 
-        }
-        li{
-            list-style-type: none;
-            background-color: white;
-        	&:first-child a{
-			border-top: 1px;
+    li{
+        list-style-type: none;
+        background-color: white;
+        &:first-child a{
+            border-top: 1px;
 		}
-            
-    a{
-      padding: 0.5em 1em;
-      display: block;
-      text-align: center;
-      text-decoration: none;
-      color: $text-color;
-        &:focus{
-      background-color: $red;
-      color: #fff;
-    }
-    &:hover{
-      background-color: $mustard-yellow;
-      color: $white;
-    }
-  }
-    }
         
+        a{
+            padding: 0.5em 1em;
+            display: block;
+            text-align: center;
+            text-decoration: none;
+            color: $text-color;
+            &:focus{
+                background-color: $red;
+                color: #fff;
+            }
+            
+            &:hover{
+                background-color: $mustard-yellow;
+                color: $white;
+            }
+        }
     }
+}
    
 
 .toggle-btn,
