fix(css): brackets change
brackets change on site-wrapper

closed

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,10 @@ header {
   .site-wrapper[data-state='slide-open'] .sliding-canvas {
     transform: translateX(-100%);
   }
-  .site-wrapper[data-state='slide-open'] {
+  .site-wrapper[data-state='slide-open'] .sliding-canvas .toggle-btn {
+    display: none;
+  }
+  [data-state='slide-open'] {
     overflow: visible;
   }
   .navigation {
