--- a/css/style.css
+++ b/css/style.css
@@ -71,16 +71,11 @@ header {
   padding: 0;
 }
 
-.navigation ul li {
+.navigation li {
   list-style-type: none;
-  background-color: white;
 }
 
-.navigation ul li:first-child a {
-  border-top: 1px;
-}
-
-.navigation ul li a {
+.navigation a {
   padding: 0.5em 1em;
   display: block;
   text-align: center;
@@ -88,14 +83,7 @@ header {
   color: #222;
 }
 
-.navigation ul li a:focus {
-  background-color: #c10000;
-  color: #fff;
-}
-
-.navigation ul li a:hover {
-  background-color: #fa940b;
-  color: #fff;
+.navigation li:hover {
 }
 
 .toggle-btn,
