--- a/css/style.css
+++ b/css/style.css
@@ -84,12 +84,12 @@ header {
 }
 
 .navigation li:hover {
-  color: #fa940b;
+  background-color: #fa940b;
 }
 
 .toggle-btn,
 .close-btn {
-  color: #222;
+  color: #c10000;
   text-decoration: none;
   height: 40px;
   width: 40px;
@@ -97,9 +97,9 @@ header {
 
 .toggle-btn:before,
 .close-btn:before {
-  padding: 13px 11px;
   height: 40px;
   width: 40px;
+  padding: 13px 11px;
   display: inline-block;
 }
 
