--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -117,14 +117,11 @@ header {
 
     &[data-state='slide-open'] .sliding-canvas{
       transform: translateX(-100%);
-        .toggle-btn{
-        display: none;
-        }
-      }
     }
 
     &[data-state='slide-open']{
       overflow:visible;
+    }
     }
 
   // Nav styles
@@ -146,6 +143,16 @@ header {
   .close-btn{
     display: none;
   }
+    .navigation ul{
+        display: inline-block;
+        position: absolute;
+        right: 1em;
+        top: 1.5em;
+    }
+    
+    li {
+        display: inline-block;
+    }
 }
 
 
