feat(css): style image
style puppy image

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,11 @@ header {
   margin: 1em;
 }
 
+.image {
+  width: 100%;
+  margin: 0 auto;
+}
+
 /**
  * Sliding Navigation
  */
@@ -158,6 +163,11 @@ header {
   .toggle-btn,
   .close-btn {
     display: none;
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
   }
   .navigation ul {
     display: inline-block;
