--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -115,7 +115,8 @@ header {
       height: 100%;
       position: relative;
       transform: translateX(0);
-      @include ease(all, 300ms, ease-in-out);
+      transition: all 300ms ease-in-out;
+      
     }
 
     &[data-state='slide-open'] .sliding-canvas{
